# RAMwich

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  test_load.py
examples/: config.yaml
examples/mlp_l4_mnist/: config.yaml  ops.json
examples/simple/: config.yaml  ops.json
src/: adc.py  config.py  core.py  dac.py  dram.py  ima.py  noc.py  node.py  op.py  ops.py  ramwich.py  run.py  simulator.py  sram.py  stats.py  tile.py  visualize.py  xbar.py
src/blocks/: __init__.py  adc.py  dac.py  dram.py  sram.py  xbar.py
src/ramwich/: __init__.py  config.py  core.py  ima.py  mvmu.py  noc.py  node.py  ops.py  pipeline.py  ramwich.py  stats.py  tile.py  visitor.py
src/ramwich/blocks/: __init__.py  adc.py  dac.py  dram.py  dram_controller.py  inreg.py  memory.py  mux.py  noc.py  outreg.py  router.py  rram_xbar.py  sna.py  snh.py  sram.py  sram_cim_unit.py  vfu.py  xbar.py
src/ramwich/config/: __init__.py  data_config.py  main_config.py
src/ramwich/config/archetecture/: __init__.py  core_config.py  mvmu_config.py  tile_config.py
src/ramwich/config/hardware/: __init__.py  adc_config.py  dac_config.py  noc_config.py  xbar_config.py
src/ramwich/utils/: __init__.py  data_convert.py  visualize.py
src/utils/: visualize.py
test/: mvm_test_matrix.npy  test_load.py  test_mvm.py
tests/: test_core_features.py  test_dram_controller.py  test_load.py  test_mlp_on_mnist.py  test_mlp_on_mnist_multi.py  test_mlp_on_mnist_single.py  test_mvm.py  test_tile_features.py
