[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RAMwich"
version = "0.1.0"

description = "A simulator for heterogeneous RRAM and SRAM CiM architectures."
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
